tests/fixtures/valid/inline_dag_basic/main.gcl
// Basic inline DAG test: define a DAG and include it.
pub dim Speed = Length / Time;

dag double_speed {
    import main.{ Speed };
    param v: Speed;

    node result: Speed = @v * 2.0;
}

param speed: Speed = 10.0 m/s;
include double_speed(v: @speed).{ result as doubled };
node final_result: Speed = @doubled;
