tests/fixtures/invalid/multi/cross_file_dag/src/lib/main.gcl
// main.gcl -- includes a DAG from another file
param speed: Velocity = 200.0 m/s;
include lib.double_speed(v: @speed).{ result as doubled, mach as mach_number };
node final_result: Velocity = @doubled;
node final_mach: Dimensionless = @mach_number;
